...
    University(name: "PUCPR", shortName: "PUCPR", city: "Curitiba", state: "PR"),
    // RJ
    University(name: "Universidade Federal do Rio de Janeiro", shortName: "UFRJ", city: "Rio de Janeiro", state: "RJ"),
    University(name: "Universidade Federal Fluminense", shortName: "UFF", city: "Niterói", state: "RJ"),
    University(name: "Universidade do Estado do Rio de Janeiro", shortName: "UERJ", city: "Rio de Janeiro", state: "RJ"),
    // RS
    University(name: "Universidade Federal do Rio Grande do Sul", shortName: "UFRGS", city: "Porto Alegre", state: "RS"),
    University(name: "PUCRS", shortName: "PUCRS", city: "Porto Alegre", state: "RS"),
    University(name: "Universidade Luterana do Brasil - Canoas", shortName: "ULBRA Canoas", city: "Canoas", state: "RS"),
    // SC
    University(name: "Universidade Federal de Santa Catarina", shortName: "UFSC", city: "Florianópolis", state: "SC"),
    // SP
    University(name: "Universidade de São Paulo", shortName: "USP", city: "São Paulo", state: "SP"),
...
